# chatbot-promptior

./: README.md  pyproject.toml
app/: server.py
doc/: descripcion_del_proyecto.md  descripcion_del_proyecto.txt
