[tool.poetry]
name = "chatbot-promptior"
version = "0.1.0"
description = ""
authors = ["Gabriel Acosta <acostagabriel1311@gmai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "<2"
python-dotenv = "^1.0.1"
langchain = "^0.1.12"
langchain-cli = "^0.0.21"
langchain-openai = "^0.0.8"
langchain-pinecone = "^0.0.3"
langchain-community = "^0.0.28"
langchain-text-splitters = "^0.0.1"
langserve = "^0.0.51"
pinecone-client = "^3.1.0"
uvicorn = "^0.23.2"
tiktoken = "^0.6.0"
rag-conversation = {path = "packages/rag-conversation"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
